# Seamless-Playlist-Generator

./: .gitignore  README.md  docker-compose.yaml  requirements.txt
backend/: .dockerignore  Dockerfile.worker  README.md  db.py  docker-compose.yaml  main.py  pyproject.toml  tasks.py  utils.py  worker.py
backend/api/: main.py  pyproject.toml
backend/bench/: locustfile.py
backend/bench/results/: milestone.html
backend/workers/: pyproject.toml
benchmark/: benchmark_mp3_to_embedding.py  load_embeddings.py  pyproject.toml  query_similar.py
benchmark/embeddings/: locustfile.py
benchmark/embeddings/results/: locust-embedding-4modelworkers.html
benchmark/full_flow/: locustfile.py
benchmark/full_flow/results/: locust-e2e-2modelworkers.html  locust-e2e-4modelworkers.html
benchmark/query_similar/: locustfile.py
benchmark/query_similar/results/: locust-query-query10.py.html  locust-query-query5.html
embedding model/: Seamless-Playlist-Generator.ipynb  embeddings.npy  features.parquet  pca.pkl  scaler.pkl
frontend/: .gitignore  Dockerfile  docker-compose.yaml  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
model_deployment/: .gitignore  Dockerfile  Makefile  README.md  common.py  docker-compose.yaml  entrypoint.sh  inference.py  model.env.example  nginx.conf  pyproject.toml  train.py
model_deployment/conf/: spark-defaults.conf
