[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.30.0",
    "celery[redis]>=5.5.3",
    "fastapi[standard]>=0.120.4",
    "minio>=7.2.18",
    "psycopg-pool>=3.2.8",
    "psycopg[binary]>=3.2.13",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "flower>=2.0.1",
    "locust>=2.41.6",
    "ruff>=0.14.3",
]
