[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "asyncpg>=0.30.0",
    "celery[redis]>=5.5.3",
    "essentia==2.1b6.dev1389",
    "fastapi[standard]>=0.120.4",
    "joblib>=1.5.2",
    "librosa>=0.11.0",
    "minio>=7.2.18",
    "numpy>=2.3.4",
    "psycopg-pool>=3.2.8",
    "psycopg[binary]>=3.2.13",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "soundfile>=0.13.1",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "flower>=2.0.1",
    "locust>=2.41.6",
    "ruff>=0.14.3",
]
